# cosmos-oss

./: .gitattributes  .gitignore  .prettierrc  .release-audit-allowlist  HANDOFF.md  LICENSE  README.md  TODOS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-macos.yml
docs/: ARCHITECTURE.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
scripts/: bootstrap-assets.mjs  build-and-notarize.sh  release-security-audit.mjs  release.mjs
src/: App.tsx  constants.ts  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.conf.production.json  tauri.conf.staging.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  ffmpeg_thumbnail.rs  file_structure.md  main.rs  thumbnail.rs  thumbnail_cache.rs
src-tauri/src/commands/: app_installation.rs  audio.rs  briefing.rs  clustering.rs  config_commands.rs  debug.rs  drive_commands.rs  file_ops.rs  indexing.rs  job_management.rs  logging.rs  migration_commands.rs  mod.rs  models.rs  search.rs  system.rs  video.rs  watched_folders.rs  window_control.rs
src-tauri/src/commands/tests/: audio_tests.rs  coordination_tests.rs  drive_management_tests.rs  error_handling_tests.rs  job_queue_tests.rs  memory_pressure_tests.rs  mod.rs  resource_management_tests.rs
src-tauri/src/models/: embedding.rs  file_item.rs  mod.rs  nomic.rs  whisper.rs
src-tauri/src/models/tests/: mod.rs  whisper_tests.rs
src-tauri/src/services/: api_key_encryption_service.rs  app_installation_service.rs  audio_service.rs  clustering_service.rs  config_service.rs  database_encryption_service.rs  database_service.rs  download_service.rs  drive_service.rs  embedding_service.rs  encryption_key_service.rs  fda_probe_service.rs  file_service.rs  gemma4_service.rs  generations_service.rs  job_queue_service.rs  migration_service.rs  mod.rs  model_service.rs  schema_service.rs  sqlite_service.rs  startup.rs  transcription_service.rs  vector_service.rs  video_service.rs  watched_folder_service.rs
src-tauri/src/services/tests/: audio_service_tests.rs  background_task_tests.rs  cancellation_consistency_tests.rs  drive_service_tests.rs  graceful_degradation_tests.rs  mod.rs  sqlite_drive_tests.rs  startup_tests.rs
src-tauri/src/utils/: logger.rs  mod.rs  path_utils.rs
src/components/: AppLayout.tsx  AppStore.tsx  BenchmarkDashboard.tsx  ContextMenu.tsx  DownloadWarning.tsx  DriveManager.tsx  DriveStatusIndicator.tsx  EnhancedFileTree.tsx  ErrorReporting.tsx  FileTree.tsx  FullDiskAccessBanner.tsx  IndexConfirmDialog.tsx  IndexStatusSheet.tsx  InteractiveTour.tsx  ModelDownloadManager.tsx  OfflineDriveCard.tsx  OnboardingTrigger.tsx  PreviewArea.tsx  QuickMenu.tsx  ReferenceImage.tsx  ReferenceImagePanel.tsx  SearchBar.tsx  Settings.tsx  SmartCollections.tsx  TranscriptionDisplay.tsx  UpdateNotification.tsx
src/config/: nav.ts
(+79 files in other folders)
