[package]
name = "cosmos"
version = "3.5.5"
description = "Cosmos OSS – a local-first, multimodal file browser"
authors = ["Cosmos OSS Contributors"]
license = "MIT"
repository = "https://github.com/cosmos-oss/cosmos-oss"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Conditional devtools feature - only in debug builds
tauri = { version = "2.0", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21.4"
tempfile = "3.5.0"
dirs = "5.0.1"
futures = "0.3"
futures-util = "0.3"
tokio-sync = "0.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
ndarray = "0.15.6"
ndarray-stats = "0.5"
walkdir = "2.3.3"
image = { version = "0.24.7", features = ["jpeg", "png", "gif", "webp", "tiff"] }
bincode = "1.3"
fastembed = "4.9.0"
libc = "0.2"
tokenizers = { version = "0.15.2", features = ["onig"] }
rand = "0.8"
mime_guess = "2.0.4"
env_logger = "0.10.0"
log = "0.4.17"
# SQLite dependencies for vector search migration with SQLCipher encryption
rusqlite = { version = "0.37", features = ["bundled", "backup", "blob", "functions", "trace", "vtab", "bundled-sqlcipher"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.7", features = ["derive"] }
which = "4.4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
# Dependencies for temporary file handling during video processing
tempdir = "0.3"
lazy_static = "1.4"
rayon = "1.7" # For parallel processing of embeddings
md5 = "0.7" # For generating unique temp directory names
# Dependencies for enhanced logging and error reporting
num_cpus = "1.16"
# Add zip functionality for log packaging
zip = "0.6.6"
os_info = "3.7.0"
# Add clipboard functionality
arboard = "3.3.0"
percent-encoding = "2.3.1"
# Encryption dependencies
aes-gcm = "0.10"
sha2 = "0.10"
# Audio transcription dependencies
candle-core = { version = "0.8.0", features = ["metal"] }
candle-nn = { version = "0.8.0", features = ["metal"] }
candle-transformers = { version = "0.8.0", features = ["metal"] }
symphonia = { version = "0.5", features = ["all"] }
byteorder = "1.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
# Add devtools feature for development builds only
dev-tools = ["tauri/devtools"]

# Profile for development with devtools
[profile.dev]
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[[bin]]
name = "cosmos"
path = "src/main.rs"
